# opengl-learn

./: .gitignore  CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt
src/examples/circle/: CMakeLists.txt  main.cpp  optimized.cpp  overlap.cpp
src/examples/square/: CMakeLists.txt  main.cpp
src/examples/triangle/: CMakeLists.txt  main.cpp
subprojects/: CMakeLists.txt
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/shaders/: CMakeLists.txt
